# spark-docker

./: CHANGELOG.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  start_wsl.sh  worker.py
.github/workflows/: docker-publish.yml
docker/: Dockerfile
src/: app.py
